# mark

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yml
docs/: OVERVIEW.md  agent-rules.md  milestones.md  progress.md  project-spec.md  releases.md  scope.md  worker-agent-rules.md
docs/bugs/: B-001-non-md-files-not-copied.md  B-002-cache-linked-file-staleness.md  B-003-cache-theme-mismatch.md  B-004-completion-subcommands-after-file.md  B-005-sidebar-footer-hotkeys-hidden.md  B-006-stray-checkbox-in-reader-shell.md  B-007-c-hotkey-not-toggling.md  B-008-letter-top-misaligned.md  B-009-terminal-accordion-visual-issues.md  B-010-theme-resets-on-navigation.md  B-011-config-sidebar-presentation-regressions.md  B-012-root-cli-file-command-overlap.md  B-013-zen-mode-background-does-not-match-letter.md  B-014-zen-mode-page-does-not-fully-become-letter.md  B-015-config-pane-stacks-beneath-shell-buttons.md
docs/features/: F-010-linked-markdown-rendering.md  F-011-breadcrumbs.md  F-012-sidebar.md  F-013-render-memory.md  F-014-folder-hierarchy.md  F-015-render-mode-defaults.md  F-016-sidebar-theme-controls.md  F-017-template-shell.md  F-018-reader-appearance-controls.md  F-019-config-menu-live-preview.md  (+10 more)
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: browser.rs  cache.rs  cleanup.rs  cleanup_home.rs  cli.rs  completions.rs  config.rs  copy_clean.rs  error.rs  index.html  lib.rs  main.rs  render.rs  storage.rs  style.css
tests/: completions.rs  render_integration.rs  view_controls.rs  wipe_command.rs
(+44 files in other folders)
