[package]
name = "mark"
version = "0.1.0"
edition = "2021"
description = "Render Markdown to HTML and open it in your browser"
license = "MIT"

[[bin]]
name = "mark"
path = "src/main.rs"

[lib]
name = "mark"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
