[package]
name = "mark"
version = "0.6.0"
edition = "2021"
description = "Render Markdown to HTML and open it in your browser"
license = "MIT"

[[bin]]
name = "mark"
path = "src/main.rs"

[lib]
name = "mark"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
open = "5"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
